# novake

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
novake_agent/: __init__.py  agent.py
novake_agent/utils/: __init__.py  nodes.py  state.py
