[project]
name = "novake"
version = "0.1.0"
description = "AI-powered trainning buddy and mentor"
authors = [
    {name = "DotCSanova",email = "albertolopezcasanova@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
